Updated to transition to another machine

--- a/LiveSite/index.html
+++ b/LiveSite/index.html
@@ -11,9 +11,9 @@
   <title>Home</title>
   <!-- CSS -->
   <link rel="stylesheet" type="text/css" href="css/site_global.css?4144991806"/>
-  <link rel="stylesheet" type="text/css" href="css/index.css?34245374" id="pagesheet"/>
+  <link rel="stylesheet" type="text/css" href="css/index.css?409599335" id="pagesheet"/>
   <!--[if lt IE 9]>
-  <link rel="stylesheet" type="text/css" href="css/iefonts_index.css?3859963072"/>
+  <link rel="stylesheet" type="text/css" href="css/iefonts_index.css?484043215"/>
   <![endif]-->
   <!-- Other scripts -->
   <script type="text/javascript">
@@ -64,9 +64,14 @@ var __adobewebfontsappname__ = "muse";
     <div class="clearfix mse_pre_init" id="u132-4"><!-- content -->
      <p>NotAnotherSpotify!</p>
     </div>
-    <a class="nonblock nontext anim_swing clearfix mse_pre_init" id="u158-4" href="index.html#one"><!-- content --><p>1st scenario</p></a>
-    <a class="nonblock nontext anim_swing clearfix mse_pre_init" id="u159-4" href="index.html#two"><!-- content --><p>2nd scenario</p></a>
-    <a class="nonblock nontext anim_swing clearfix mse_pre_init" id="u160-4" href="index.html#three"><!-- content --><p>3rd scenario</p></a>
+    <div class="clip_frame colelem" id="u743"><!-- image -->
+     <img class="block" id="u743_img" src="images/singer.jpg" data-hidpi-src="images/singer_2x.jpg" alt="" width="31" height="31"/>
+    </div>
+    <div class="clearfix colelem" id="pu158-4"><!-- group -->
+     <a class="nonblock nontext anim_swing clearfix mse_pre_init" id="u158-4" href="index.html#one"><!-- content --><p>by artist</p></a>
+     <a class="nonblock nontext anim_swing clearfix mse_pre_init" id="u159-4" href="index.html#two"><!-- content --><p>2nd scenario</p></a>
+     <a class="nonblock nontext anim_swing clearfix mse_pre_init" id="u160-4" href="index.html#three"><!-- content --><p>3rd scenario</p></a>
+    </div>
     <div class="clearfix mse_pre_init" id="u156-4"><!-- content -->
      <p>by Team Spotifier</p>
     </div>
@@ -113,6 +118,9 @@ var __adobewebfontsappname__ = "muse";
      <img class="block" id="u172_img" src="images/downarrow.png" data-hidpi-src="images/downarrow_2x.png" alt="" width="39" height="39"/>
     </div>
     <a class="anchor_item colelem" id="one"></a>
+    <div class="clearfix colelem" id="u81-4"><!-- content -->
+     <p>create a playlist by artist</p>
+    </div>
     <div class="PamphletWidget clearfix widget_invisible mse_pre_init" id="pamphletu389"><!-- none box -->
      <div class="ThumbGroup clearfix grpelem" id="u390"><!-- none box -->
       <div class="popup_anchor">
@@ -163,28 +171,17 @@ var __adobewebfontsappname__ = "muse";
           <div></div>
 </div>
          <div class="grpelem" id="u637"><!-- custom html -->
-          <button class="PamphletCloseButton rounded-corners clearfix" id="s1CancelButton" style="height:30px; width:95px; color=#c4c4c4;border-radius: 10px;">done</button>
+          <button class="PamphletCloseButton" id="s1CancelButton" style="height:30px; width:95px; background-color:#c4c4c4; border-radius:10px;">done</button>
 </div>
          <div class="grpelem" id="u639"><!-- custom html -->
-          <button id="buttonu622" style="height:30px; width:150px; color=#c4c4c4;border-radius: 10px;">delete selected playlist</button>
+          <button id="buttonu622" style="height:30px; width:150px; background-color:#c4c4c4;border-radius: 10px;">delete this playlist</button>
 </div>
          <div class="grpelem" id="u657"><!-- custom html -->
-          <button id="playWholePlaylistButton" style="height:30px; width:100px; color=#c4c4c4;border-radius: 10px;">play playlist</button>
+          <button id="playWholePlaylistButton" style="height:30px; width:100px; background-color:#c4c4c4;border-radius: 10px;">play</button>
 </div>
         </div>
        </div>
       </div>
-     </div>
-    </div>
-    <div class="clearfix colelem" id="pu81-4"><!-- group -->
-     <div class="clearfix grpelem" id="u81-4"><!-- content -->
-      <p>meet bob</p>
-     </div>
-     <div class="clearfix grpelem" id="u167-4"><!-- content -->
-      <p>Bob is a 21 year old college student who is a part of many student clubs on campus. As a leader, he has to organize multiple events for different focus groups. He often spends hours before an event manually creating playlists that might suit the mood of the activity. Although he knows a lot about music, he wishes he could spend less time on creating playlists and more time on organizing the events.</p>
-     </div>
-     <div class="rounded-corners clip_frame grpelem" id="u178"><!-- image -->
-      <img class="block" id="u178_img" src="images/avaone.jpg" data-hidpi-src="images/avaone_2x.jpg" alt="" width="120" height="120"/>
      </div>
     </div>
     <div class="clearfix colelem" id="pu190"><!-- group -->
@@ -766,8 +763,8 @@ $('#u156-4').registerPositionScrollEffect([{"speed":[0,0],"in":[-Infinity,36]},{
 $('#u161').registerPositionScrollEffect([{"speed":[0,0],"in":[-Infinity,36]},{"speed":[0,0],"in":[36,Infinity]}]);/* scroll effect */
 $('#u162').registerPositionScrollEffect([{"speed":[0,0],"in":[-Infinity,36]},{"speed":[0,0],"in":[36,Infinity]}]);/* scroll effect */
 $('#u163').registerPositionScrollEffect([{"speed":[0,0],"in":[-Infinity,36]},{"speed":[0,0],"in":[36,Infinity]}]);/* scroll effect */
-$('#u380').registerOpacityScrollEffect([{"in":[-Infinity,746.5],"fade":0,"opacity":0},{"opacity":0,"in":[746.5,746.5]},{"in":[746.5,Infinity],"fade":52.55,"opacity":100}]);/* scroll effect */
-$('#u379-4').registerOpacityScrollEffect([{"in":[-Infinity,746.45],"fade":0,"opacity":0},{"opacity":0,"in":[746.45,746.45]},{"in":[746.45,Infinity],"fade":51.6,"opacity":100}]);/* scroll effect */
+$('#u380').registerOpacityScrollEffect([{"fade":0,"in":[-Infinity,746.5],"opacity":0},{"opacity":0,"in":[746.5,746.5]},{"fade":52.55,"in":[746.5,Infinity],"opacity":100}]);/* scroll effect */
+$('#u379-4').registerOpacityScrollEffect([{"fade":0,"in":[-Infinity,746.45],"opacity":0},{"opacity":0,"in":[746.45,746.45]},{"fade":51.6,"in":[746.45,Infinity],"opacity":100}]);/* scroll effect */
 Muse.Utils.initWidget('#pamphletu389', function(elem) { new WebPro.Widget.ContentSlideShow(elem, {contentLayout_runtime:'lightbox',event:'click',deactivationEvent:'none',autoPlay:false,displayInterval:3000,transitionStyle:'fading',transitionDuration:500,hideAllContentsFirst:false,shuffle:false,enableSwipe:true,resumeAutoplay:true,resumeAutoplayInterval:3000,playOnce:false,autoActivate_runtime:false}); });/* #pamphletu389 */
 $('#pamphletu389').registerPositionScrollEffect([{"speed":[0,0],"in":[-Infinity,748.4]},{"speed":[0,0],"in":[748.4,Infinity]}]);/* scroll effect */
 Muse.Utils.initWidget('#pamphletu291', function(elem) { new WebPro.Widget.ContentSlideShow(elem, {contentLayout_runtime:'lightbox',event:'click',deactivationEvent:'none',autoPlay:false,displayInterval:3000,transitionStyle:'fading',transitionDuration:500,hideAllContentsFirst:false,shuffle:false,enableSwipe:true,resumeAutoplay:true,resumeAutoplayInterval:3000,playOnce:false,autoActivate_runtime:false}); });/* #pamphletu291 */
