footer playlist manager added, button names all the same, artwork div added, song name, artist name, bio divs, styled, old manager removed

--- a/LiveSite/index.html
+++ b/LiveSite/index.html
@@ -3,7 +3,7 @@
  <head>
 
   <script type="text/javascript">
-   if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required":["jquery-1.8.3.min.js", "museutils.js", "jquery.scrolleffects.js", "jquery.watch.js", "webpro.js", "musewpslideshow.js", "jquery.museoverlay.js", "touchswipe.js", "index.css"], "outOfDate":[]};
+   if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required":["jquery-1.8.3.min.js", "museutils.js", "jquery.scrolleffects.js", "jquery.watch.js", "webpro.js", "musewpslideshow.js", "jquery.museoverlay.js", "touchswipe.js", "musewpdisclosure.js", "index.css"], "outOfDate":[]};
 </script>
   
   <meta http-equiv="Content-type" content="text/html;charset=UTF-8"/>
@@ -11,9 +11,9 @@
   <title>Home</title>
   <!-- CSS -->
   <link rel="stylesheet" type="text/css" href="css/site_global.css?4144991806"/>
-  <link rel="stylesheet" type="text/css" href="css/index.css?409599335" id="pagesheet"/>
+  <link rel="stylesheet" type="text/css" href="css/index.css?364744874" id="pagesheet"/>
   <!--[if lt IE 9]>
-  <link rel="stylesheet" type="text/css" href="css/iefonts_index.css?484043215"/>
+  <link rel="stylesheet" type="text/css" href="css/iefonts_index.css?103121418"/>
   <![endif]-->
   <!-- Other scripts -->
   <script type="text/javascript">
@@ -64,14 +64,18 @@ var __adobewebfontsappname__ = "muse";
     <div class="clearfix mse_pre_init" id="u132-4"><!-- content -->
      <p>NotAnotherSpotify!</p>
     </div>
-    <div class="clip_frame colelem" id="u743"><!-- image -->
+    <div class="clip_frame mse_pre_init" id="u743"><!-- image -->
      <img class="block" id="u743_img" src="images/singer.jpg" data-hidpi-src="images/singer_2x.jpg" alt="" width="31" height="31"/>
     </div>
-    <div class="clearfix colelem" id="pu158-4"><!-- group -->
-     <a class="nonblock nontext anim_swing clearfix mse_pre_init" id="u158-4" href="index.html#one"><!-- content --><p>by artist</p></a>
-     <a class="nonblock nontext anim_swing clearfix mse_pre_init" id="u159-4" href="index.html#two"><!-- content --><p>2nd scenario</p></a>
-     <a class="nonblock nontext anim_swing clearfix mse_pre_init" id="u160-4" href="index.html#three"><!-- content --><p>3rd scenario</p></a>
+    <a class="nonblock nontext anim_swing clearfix mse_pre_init" id="u158-4" href="index.html#one"><!-- content --><p>by artist</p></a>
+    <div class="clip_frame mse_pre_init" id="u751"><!-- image -->
+     <img class="block" id="u751_img" src="images/disc.png" data-hidpi-src="images/disc_2x.png" alt="" width="31" height="31"/>
     </div>
+    <a class="nonblock nontext anim_swing clearfix mse_pre_init" id="u749-4" href="index.html#one"><!-- content --><p>song &amp; artist</p></a>
+    <div class="clip_frame mse_pre_init" id="u868"><!-- image -->
+     <img class="block" id="u868_img" src="images/wavewht.png" data-hidpi-src="images/wavewht_2x.png" alt="" width="31" height="31"/>
+    </div>
+    <a class="nonblock nontext anim_swing clearfix mse_pre_init" id="u750-4" href="index.html#one"><!-- content --><p>by attributes</p></a>
     <div class="clearfix mse_pre_init" id="u156-4"><!-- content -->
      <p>by Team Spotifier</p>
     </div>
@@ -98,7 +102,7 @@ var __adobewebfontsappname__ = "muse";
     <div class="clearfix colelem" id="pu695"><!-- group -->
      <div class="grpelem" id="u695"><!-- custom html -->
       <video width="400" height="240" autoplay=true loop>
-  <source src="video/bars.mp4" type="video/mp4">
+  <source src="video/1.mp4" type="video/mp4">
   <source src="movie.ogg" type="video/ogg">
   Your browser does not support the video tag.
 </video>
@@ -120,69 +124,6 @@ var __adobewebfontsappname__ = "muse";
     <a class="anchor_item colelem" id="one"></a>
     <div class="clearfix colelem" id="u81-4"><!-- content -->
      <p>create a playlist by artist</p>
-    </div>
-    <div class="PamphletWidget clearfix widget_invisible mse_pre_init" id="pamphletu389"><!-- none box -->
-     <div class="ThumbGroup clearfix grpelem" id="u390"><!-- none box -->
-      <div class="popup_anchor">
-       <div class="Thumb popup_element clearfix" id="u393"><!-- column -->
-        <div class="clip_frame ose_pre_init colelem" id="u380"><!-- image -->
-         <img class="block" id="u380_img" src="images/playlists.png" data-hidpi-src="images/playlists_2x.png" alt="" width="59" height="59"/>
-        </div>
-        <div class="clearfix ose_pre_init colelem" id="u379-4"><!-- content -->
-         <p>manage playlists</p>
-        </div>
-       </div>
-      </div>
-     </div>
-     <div class="popup_anchor" id="u396popup">
-      <div class="ContainerGroup rgba-background clearfix" id="u396"><!-- stack box -->
-       <div class="Container clearfix grpelem" id="u397"><!-- column -->
-        <div class="clearfix colelem" id="pu407-4"><!-- group -->
-         <div class="clearfix grpelem" id="u407-4"><!-- content -->
-          <p>manage playlists</p>
-         </div>
-         <div class="clip_frame grpelem" id="u413"><!-- image -->
-          <img class="block" id="u413_img" src="images/managelist.png" data-hidpi-src="images/managelist_2x.png" alt="" width="43" height="43"/>
-         </div>
-         <div class="clearfix grpelem" id="u419-4"><!-- content -->
-          <p>select a playlist and play the entire list, remove items,&nbsp; or simply delete the whole playlist</p>
-         </div>
-        </div>
-        <div class="clearfix colelem" id="ppu410-4"><!-- group -->
-         <div class="clearfix grpelem" id="pu410-4"><!-- column -->
-          <div class="clearfix colelem" id="u410-4"><!-- content -->
-           <p>select playlist</p>
-          </div>
-          <div class="colelem" id="u408"><!-- custom html -->
-           <select name="playlistSelector" style="width:150px; height:50px" id="scenario1PlaylistSelector">
-  <option value="volvo">Volvo</option>
-  <option value="saab">Saab</option>
-  <option value="fiat">Fiat</option>
-  <option value="audi">Audi</option>
-</select>
-</div>
-         </div>
-         <div class="grpelem" id="u411"><!-- custom html -->
-          <div id="managePlaylistDiv" class="grpelem" style="height:250px; width:450px; border-width:2px; border-style:solid; overflow:scroll;">test</div>
-</div>
-        </div>
-        <div class="clearfix colelem" id="pu635"><!-- group -->
-         <div class="grpelem" id="u635"><!-- custom html -->
-          <div></div>
-</div>
-         <div class="grpelem" id="u637"><!-- custom html -->
-          <button class="PamphletCloseButton" id="s1CancelButton" style="height:30px; width:95px; background-color:#c4c4c4; border-radius:10px;">done</button>
-</div>
-         <div class="grpelem" id="u639"><!-- custom html -->
-          <button id="buttonu622" style="height:30px; width:150px; background-color:#c4c4c4;border-radius: 10px;">delete this playlist</button>
-</div>
-         <div class="grpelem" id="u657"><!-- custom html -->
-          <button id="playWholePlaylistButton" style="height:30px; width:100px; background-color:#c4c4c4;border-radius: 10px;">play</button>
-</div>
-        </div>
-       </div>
-      </div>
-     </div>
     </div>
     <div class="clearfix colelem" id="pu190"><!-- group -->
      <div class="grpelem" id="u190"><!-- custom html -->
@@ -726,8 +667,24 @@ livenessSliderChanged(event,ui);
       <iframe src="https://embed.spotify.com/?uri=spotify:track:4th1RQAelzqgY7wL53UGQt" width="250" height="380" frameborder="0" allowtransparency="true"></iframe>
 </div>
     </div>
+    <div class="browser_width" id="accordionu833-bw">
+     <ul class="AccordionWidget clearfix pinned-colelem" id="accordionu833"><!-- vertical box -->
+      <li class="AccordionPanel clearfix colelem100" id="u834"><!-- vertical box --><div class="AccordionPanelTab clearfix colelem100" id="u835-3"><!-- content --><p>&nbsp;</p></div><div class="AccordionPanelContent disn clearfix colelem100" id="u836"><!-- group --><div class="grpelem" id="u838"><!-- custom html --><div id="albumArtworkDiv" class="grpelem" style="height:200px; width:200px; border-width:2px; border-style:solid; overflow:scroll;">test</div></div><div class="clearfix grpelem" id="pu837-4"><!-- column --><div class="clearfix colelem" id="u837-4"><!-- content --><p>song name</p></div><div class="clearfix colelem" id="u840-4"><!-- content --><p>artist name</p></div><div class="clearfix colelem" id="u841-4"><!-- content --><p>bio</p></div><div class="clearfix colelem" id="u842-4"><!-- content --><p>artist bio info</p></div></div><div class="clearfix grpelem" id="ppu863-4"><!-- column --><div class="clearfix colelem" id="pu863-4"><!-- group --><div class="clearfix grpelem" id="u863-4"><!-- content --><p>manage playlists</p></div><div class="clip_frame grpelem" id="u864"><!-- image --><img class="block" id="u864_img" src="images/managelist.png" data-hidpi-src="images/managelist_2x.png" alt="" width="43" height="43"/></div><div class="clearfix grpelem" id="u866-4"><!-- content --><p>select a playlist to play, edit, or delete</p></div></div><div class="clearfix colelem" id="u857-4"><!-- content --><p>select playlist</p></div><div class="clearfix colelem" id="pu855"><!-- group --><div class="grpelem" id="u855"><!-- custom html --><select name="playlistSelector" style="width:150px; height:50px" id="scenario1PlaylistSelector">
+  <option value="volvo">Volvo</option>
+  <option value="saab">Saab</option>
+  <option value="fiat">Fiat</option>
+  <option value="audi">Audi</option>
+</select></div><div class="grpelem" id="u853"><!-- custom html --><div id="managePlaylistDiv" class="grpelem" style="height:250px; width:450px; border-width:2px; border-style:solid; overflow:scroll;">test</div></div></div><div class="clearfix colelem" id="pu851"><!-- group --><div class="grpelem" id="u851"><!-- custom html --><button id="playWholePlaylistButton" style="height:30px; width:100px; background-color:#c4c4c4;border-radius: 10px;">play</button></div><div class="grpelem" id="u849"><!-- custom html --><button id="buttonu622" style="height:30px; width:130px; background-color:#c4c4c4;border-radius: 10px;">delete playlist</button></div></div></div></div></li>
+     </ul>
+    </div>
     <div class="verticalspacer"></div>
    </div>
+  </div>
+  <div class="preload_images">
+   <img class="preload" src="images/myplaylistsclose.png" alt=""/>
+   <img class="preload" src="images/myplaylistsclose_2x.png" alt=""/>
+   <img class="preload" src="images/myplaylists.png" alt=""/>
+   <img class="preload" src="images/myplaylists_2x.png" alt=""/>
   </div>
   <!-- JS includes -->
   <script type="text/javascript">
@@ -743,6 +700,7 @@ livenessSliderChanged(event,ui);
   <script src="scripts/musewpslideshow.js?360574455" type="text/javascript"></script>
   <script src="scripts/jquery.museoverlay.js?342093292" type="text/javascript"></script>
   <script src="scripts/touchswipe.js?4218319045" type="text/javascript"></script>
+  <script src="scripts/musewpdisclosure.js?404074387" type="text/javascript"></script>
   <!-- Other scripts -->
   <script type="text/javascript">
    $(document).ready(function() { try {
@@ -752,27 +710,27 @@ typeof $!="undefined"?Muse.assets.required.splice(d,1):d++;break;default:throw E
 Muse.Utils.transformMarkupToFixBrowserProblemsPreInit();/* body */
 Muse.Utils.detectScreenResolution();/* HiDPI screens */
 Muse.Utils.prepHyperlinks(true);/* body */
-$('#u124-bw').registerPositionScrollEffect([{"speed":[null,0],"in":[-Infinity,0]},{"speed":[null,0],"in":[0,Infinity]}]);/* scroll effect */
+$('#u124-bw').registerPositionScrollEffect([{"speed":[null,0],"in":[-Infinity,0.55]},{"speed":[null,0],"in":[0.55,Infinity]}]);/* scroll effect */
 Muse.Utils.resizeHeight()/* resize height */
 $('#u149').registerPositionScrollEffect([{"speed":[0,0],"in":[-Infinity,36]},{"speed":[0,0],"in":[36,Infinity]}]);/* scroll effect */
 $('#u132-4').registerPositionScrollEffect([{"speed":[0,0],"in":[-Infinity,36]},{"speed":[0,0],"in":[36,Infinity]}]);/* scroll effect */
-$('#u158-4').registerPositionScrollEffect([{"speed":[0,0],"in":[-Infinity,36]},{"speed":[0,0],"in":[36,Infinity]}]);/* scroll effect */
-$('#u159-4').registerPositionScrollEffect([{"speed":[0,0],"in":[-Infinity,36]},{"speed":[0,0],"in":[36,Infinity]}]);/* scroll effect */
-$('#u160-4').registerPositionScrollEffect([{"speed":[0,0],"in":[-Infinity,36]},{"speed":[0,0],"in":[36,Infinity]}]);/* scroll effect */
+$('#u743').registerPositionScrollEffect([{"speed":[0,0],"in":[-Infinity,35.75]},{"speed":[0,0],"in":[35.75,Infinity]}]);/* scroll effect */
+$('#u158-4').registerPositionScrollEffect([{"speed":[0,0],"in":[-Infinity,35.75]},{"speed":[0,0],"in":[35.75,Infinity]}]);/* scroll effect */
+$('#u751').registerPositionScrollEffect([{"speed":[0,0],"in":[-Infinity,36]},{"speed":[0,0],"in":[36,Infinity]}]);/* scroll effect */
+$('#u749-4').registerPositionScrollEffect([{"speed":[0,0],"in":[-Infinity,35.65]},{"speed":[0,0],"in":[35.65,Infinity]}]);/* scroll effect */
+$('#u868').registerPositionScrollEffect([{"speed":[0,0],"in":[-Infinity,36]},{"speed":[0,0],"in":[36,Infinity]}]);/* scroll effect */
+$('#u750-4').registerPositionScrollEffect([{"speed":[0,0],"in":[-Infinity,35.65]},{"speed":[0,0],"in":[35.65,Infinity]}]);/* scroll effect */
 $('#u156-4').registerPositionScrollEffect([{"speed":[0,0],"in":[-Infinity,36]},{"speed":[0,0],"in":[36,Infinity]}]);/* scroll effect */
-$('#u161').registerPositionScrollEffect([{"speed":[0,0],"in":[-Infinity,36]},{"speed":[0,0],"in":[36,Infinity]}]);/* scroll effect */
-$('#u162').registerPositionScrollEffect([{"speed":[0,0],"in":[-Infinity,36]},{"speed":[0,0],"in":[36,Infinity]}]);/* scroll effect */
+$('#u161').registerPositionScrollEffect([{"speed":[0,0],"in":[-Infinity,36.05]},{"speed":[0,0],"in":[36.05,Infinity]}]);/* scroll effect */
+$('#u162').registerPositionScrollEffect([{"speed":[0,0],"in":[-Infinity,35.05]},{"speed":[0,0],"in":[35.05,Infinity]}]);/* scroll effect */
 $('#u163').registerPositionScrollEffect([{"speed":[0,0],"in":[-Infinity,36]},{"speed":[0,0],"in":[36,Infinity]}]);/* scroll effect */
-$('#u380').registerOpacityScrollEffect([{"fade":0,"in":[-Infinity,746.5],"opacity":0},{"opacity":0,"in":[746.5,746.5]},{"fade":52.55,"in":[746.5,Infinity],"opacity":100}]);/* scroll effect */
-$('#u379-4').registerOpacityScrollEffect([{"fade":0,"in":[-Infinity,746.45],"opacity":0},{"opacity":0,"in":[746.45,746.45]},{"fade":51.6,"in":[746.45,Infinity],"opacity":100}]);/* scroll effect */
-Muse.Utils.initWidget('#pamphletu389', function(elem) { new WebPro.Widget.ContentSlideShow(elem, {contentLayout_runtime:'lightbox',event:'click',deactivationEvent:'none',autoPlay:false,displayInterval:3000,transitionStyle:'fading',transitionDuration:500,hideAllContentsFirst:false,shuffle:false,enableSwipe:true,resumeAutoplay:true,resumeAutoplayInterval:3000,playOnce:false,autoActivate_runtime:false}); });/* #pamphletu389 */
-$('#pamphletu389').registerPositionScrollEffect([{"speed":[0,0],"in":[-Infinity,748.4]},{"speed":[0,0],"in":[748.4,Infinity]}]);/* scroll effect */
 Muse.Utils.initWidget('#pamphletu291', function(elem) { new WebPro.Widget.ContentSlideShow(elem, {contentLayout_runtime:'lightbox',event:'click',deactivationEvent:'none',autoPlay:false,displayInterval:3000,transitionStyle:'fading',transitionDuration:500,hideAllContentsFirst:false,shuffle:false,enableSwipe:true,resumeAutoplay:true,resumeAutoplayInterval:3000,playOnce:false,autoActivate_runtime:false}); });/* #pamphletu291 */
 Muse.Utils.initWidget('#pamphletu329', function(elem) { new WebPro.Widget.ContentSlideShow(elem, {contentLayout_runtime:'lightbox',event:'click',deactivationEvent:'none',autoPlay:false,displayInterval:3000,transitionStyle:'fading',transitionDuration:500,hideAllContentsFirst:false,shuffle:false,enableSwipe:true,resumeAutoplay:true,resumeAutoplayInterval:3000,playOnce:false,autoActivate_runtime:false}); });/* #pamphletu329 */
 Muse.Utils.initWidget('#pamphletu498', function(elem) { new WebPro.Widget.ContentSlideShow(elem, {contentLayout_runtime:'lightbox',event:'click',deactivationEvent:'none',autoPlay:false,displayInterval:3000,transitionStyle:'fading',transitionDuration:500,hideAllContentsFirst:false,shuffle:false,enableSwipe:true,resumeAutoplay:true,resumeAutoplayInterval:3000,playOnce:false,autoActivate_runtime:false}); });/* #pamphletu498 */
 Muse.Utils.initWidget('#pamphletu528', function(elem) { new WebPro.Widget.ContentSlideShow(elem, {contentLayout_runtime:'lightbox',event:'click',deactivationEvent:'none',autoPlay:false,displayInterval:3000,transitionStyle:'fading',transitionDuration:500,hideAllContentsFirst:false,shuffle:false,enableSwipe:true,resumeAutoplay:true,resumeAutoplayInterval:3000,playOnce:false,autoActivate_runtime:false}); });/* #pamphletu528 */
 Muse.Utils.initWidget('#pamphletu553', function(elem) { new WebPro.Widget.ContentSlideShow(elem, {contentLayout_runtime:'lightbox',event:'click',deactivationEvent:'none',autoPlay:false,displayInterval:3000,transitionStyle:'fading',transitionDuration:500,hideAllContentsFirst:false,shuffle:false,enableSwipe:true,resumeAutoplay:true,resumeAutoplayInterval:3000,playOnce:false,autoActivate_runtime:false}); });/* #pamphletu553 */
 Muse.Utils.initWidget('#pamphletu588', function(elem) { new WebPro.Widget.ContentSlideShow(elem, {contentLayout_runtime:'lightbox',event:'click',deactivationEvent:'none',autoPlay:false,displayInterval:3000,transitionStyle:'fading',transitionDuration:500,hideAllContentsFirst:false,shuffle:false,enableSwipe:true,resumeAutoplay:true,resumeAutoplayInterval:3000,playOnce:false,autoActivate_runtime:false}); });/* #pamphletu588 */
+Muse.Utils.initWidget('#accordionu833', function(elem) { return new WebPro.Widget.Accordion(elem, {canCloseAll:true,defaultIndex:-1}); });/* #accordionu833 */
 Muse.Utils.fullPage('#page');/* 100% height page */
 Muse.Utils.showWidgetsWhenReady();/* body */
 Muse.Utils.transformMarkupToFixBrowserProblems();/* body */
