updated nav bar links, added icons to sections

--- a/LiveSite/index.html
+++ b/LiveSite/index.html
@@ -11,9 +11,9 @@
   <title>Home</title>
   <!-- CSS -->
   <link rel="stylesheet" type="text/css" href="css/site_global.css?4144991806"/>
-  <link rel="stylesheet" type="text/css" href="css/index.css?364744874" id="pagesheet"/>
+  <link rel="stylesheet" type="text/css" href="css/index.css?4004932946" id="pagesheet"/>
   <!--[if lt IE 9]>
-  <link rel="stylesheet" type="text/css" href="css/iefonts_index.css?103121418"/>
+  <link rel="stylesheet" type="text/css" href="css/iefonts_index.css?3847144646"/>
   <![endif]-->
   <!-- Other scripts -->
   <script type="text/javascript">
@@ -64,18 +64,12 @@ var __adobewebfontsappname__ = "muse";
     <div class="clearfix mse_pre_init" id="u132-4"><!-- content -->
      <p>NotAnotherSpotify!</p>
     </div>
-    <div class="clip_frame mse_pre_init" id="u743"><!-- image -->
-     <img class="block" id="u743_img" src="images/singer.jpg" data-hidpi-src="images/singer_2x.jpg" alt="" width="31" height="31"/>
-    </div>
-    <a class="nonblock nontext anim_swing clearfix mse_pre_init" id="u158-4" href="index.html#one"><!-- content --><p>by artist</p></a>
-    <div class="clip_frame mse_pre_init" id="u751"><!-- image -->
-     <img class="block" id="u751_img" src="images/disc.png" data-hidpi-src="images/disc_2x.png" alt="" width="31" height="31"/>
-    </div>
-    <a class="nonblock nontext anim_swing clearfix mse_pre_init" id="u749-4" href="index.html#one"><!-- content --><p>song &amp; artist</p></a>
-    <div class="clip_frame mse_pre_init" id="u868"><!-- image -->
-     <img class="block" id="u868_img" src="images/wavewht.png" data-hidpi-src="images/wavewht_2x.png" alt="" width="31" height="31"/>
-    </div>
-    <a class="nonblock nontext anim_swing clearfix mse_pre_init" id="u750-4" href="index.html#one"><!-- content --><p>by attributes</p></a>
+    <a class="nonblock nontext anim_swing clip_frame mse_pre_init" id="u743" href="index.html#three"><!-- image --><img class="block" id="u743_img" src="images/singer.jpg" data-hidpi-src="images/singer_2x.jpg" alt="" width="31" height="31"/></a>
+    <a class="nonblock nontext anim_swing clearfix mse_pre_init" id="u158-4" href="index.html#three"><!-- content --><p>by artist</p></a>
+    <a class="nonblock nontext anim_swing clip_frame mse_pre_init" id="u751" href="index.html#two"><!-- image --><img class="block" id="u751_img" src="images/disc.png" data-hidpi-src="images/disc_2x.png" alt="" width="31" height="31"/></a>
+    <a class="nonblock nontext anim_swing clearfix mse_pre_init" id="u749-4" href="index.html#two"><!-- content --><p>song &amp; artist</p></a>
+    <a class="nonblock nontext anim_swing clip_frame mse_pre_init" id="u868" href="index.html#three"><!-- image --><img class="block" id="u868_img" src="images/wavewht.png" data-hidpi-src="images/wavewht_2x.png" alt="" width="31" height="31"/></a>
+    <a class="nonblock nontext anim_swing clearfix mse_pre_init" id="u750-4" href="index.html#three"><!-- content --><p>by attributes</p></a>
     <div class="clearfix mse_pre_init" id="u156-4"><!-- content -->
      <p>by Team Spotifier</p>
     </div>
@@ -122,8 +116,13 @@ var __adobewebfontsappname__ = "muse";
      <img class="block" id="u172_img" src="images/downarrow.png" data-hidpi-src="images/downarrow_2x.png" alt="" width="39" height="39"/>
     </div>
     <a class="anchor_item colelem" id="one"></a>
-    <div class="clearfix colelem" id="u81-4"><!-- content -->
-     <p>create a playlist by artist</p>
+    <div class="clearfix colelem" id="pu874"><!-- group -->
+     <div class="clip_frame grpelem" id="u874"><!-- image -->
+      <img class="block" id="u874_img" src="images/singerwht.jpg" data-hidpi-src="images/singerwht_2x.jpg" alt="" width="60" height="60"/>
+     </div>
+     <div class="clearfix grpelem" id="u81-4"><!-- content -->
+      <p>create a playlist by artist</p>
+     </div>
     </div>
     <div class="clearfix colelem" id="pu190"><!-- group -->
      <div class="grpelem" id="u190"><!-- custom html -->
@@ -268,16 +267,12 @@ durationSlider1Changed(event,ui);
 </div>
     </div>
     <a class="anchor_item colelem" id="two"></a>
-    <div class="clearfix colelem" id="u244-4"><!-- content -->
-     <p>bob likes music with different themes</p>
-    </div>
-    <div class="clearfix colelem" id="pu245"><!-- group -->
-     <div class="rounded-corners clip_frame grpelem" id="u245"><!-- image -->
-      <img class="block" id="u245_img" src="images/avaone.jpg" data-hidpi-src="images/avaone_2x.jpg" alt="" width="120" height="120"/>
+    <div class="clearfix colelem" id="pu880"><!-- group -->
+     <div class="clip_frame grpelem" id="u880"><!-- image -->
+      <img class="block" id="u880_img" src="images/discblk.png" data-hidpi-src="images/discblk_2x.png" alt="" width="60" height="60"/>
      </div>
-     <div class="clearfix grpelem" id="u248-5"><!-- content -->
-      <p>Bob selects themes about the event from an in-built checkbox. This checkbox includes tags such as “dance”, “formal”, “chill” and “high-energy” to help Bob determine the nature of the event and the people attending it. He doesn’t want his music taste to influence the music played at the event, so he selects broad tags. He also specifies the duration of the event (for example, he wants to play music for 2 hours). Once he’s done making his selection, he gets a list of relevant music that satisfy his requirements and is close to the given duration. This is generated in the form of a playlist. He can add and remove songs at any time. When he removes a song, he gets a suggestion for another similar song that matches his tags. He can choose to add this to his playlist if he wishes.</p>
-      <p>&nbsp;</p>
+     <div class="clearfix grpelem" id="u244-4"><!-- content -->
+      <p>create a playlist by artist and song</p>
      </div>
     </div>
     <div class="clearfix colelem" id="ppu434"><!-- group -->
@@ -341,35 +336,33 @@ durationSlider2Changed(event,ui);
        <div class="popup_anchor" id="u508popup">
         <div class="ContainerGroup rgba-background clearfix" id="u508"><!-- stack box -->
          <div class="Container clearfix grpelem" id="u509"><!-- column -->
-          <div class="position_content" id="u509_position_content">
-           <div class="clearfix colelem" id="pu512-4"><!-- group -->
-            <div class="clearfix grpelem" id="u512-4"><!-- content -->
-             <p>add to existing playlist</p>
-            </div>
-            <div class="clip_frame grpelem" id="u516"><!-- image -->
-             <img class="block" id="u516_img" src="images/add.png" data-hidpi-src="images/add_2x.png" alt="" width="20" height="20"/>
-            </div>
+          <div class="clearfix colelem" id="pu512-4"><!-- group -->
+           <div class="clearfix grpelem" id="u512-4"><!-- content -->
+            <p>add to existing playlist</p>
            </div>
-           <div class="clearfix colelem" id="u518-6"><!-- content -->
-            <p>Choose a playlist and click save</p>
-            <p>to add these songs.</p>
+           <div class="clip_frame grpelem" id="u516"><!-- image -->
+            <img class="block" id="u516_img" src="images/add.png" data-hidpi-src="images/add_2x.png" alt="" width="20" height="20"/>
            </div>
-           <div class="clearfix colelem" id="pu514"><!-- group -->
-            <div class="grpelem" id="u514"><!-- custom html -->
-             <select name="playlistSelector2" style="width:200px; height=50px" id="scenario2PlaylistSelector">
+          </div>
+          <div class="clearfix colelem" id="u518-6"><!-- content -->
+           <p>Choose a playlist and click save</p>
+           <p>to add these songs.</p>
+          </div>
+          <div class="clearfix colelem" id="pu514"><!-- group -->
+           <div class="grpelem" id="u514"><!-- custom html -->
+            <select name="playlistSelector2" style="width:200px; height=50px" id="scenario2PlaylistSelector">
   <option value="volvo">Volvo</option>
   <option value="saab">Saab</option>
   <option value="fiat">Fiat</option>
   <option value="audi">Audi</option>
 </select>
 </div>
-            <div class="grpelem" id="u510"><!-- custom html -->
-             <button class="PamphletCloseButton rounded-corners clearfix" id="s2ExistingSaveButton" style="height:30px; width:95px; color=#c4c4c4;border-radius: 10px;">save</button>
+           <div class="grpelem" id="u510"><!-- custom html -->
+            <button class="PamphletCloseButton rounded-corners clearfix" id="s2ExistingSaveButton" style="height:30px; width:95px; color=#c4c4c4;border-radius: 10px;">save</button>
 </div>
-            <div class="grpelem" id="u659"><!-- custom html -->
-             <button class="PamphletCloseButton rounded-corners clearfix" id="s2CloseButton" style="height:30px; width:95px; color=#c4c4c4;border-radius: 10px;">cancel</button>
+           <div class="grpelem" id="u659"><!-- custom html -->
+            <button class="PamphletCloseButton rounded-corners clearfix" id="s2CloseButton" style="height:30px; width:95px; color=#c4c4c4;border-radius: 10px;">cancel</button>
 </div>
-           </div>
           </div>
          </div>
         </div>
@@ -393,30 +386,28 @@ durationSlider2Changed(event,ui);
         <div class="popup_anchor" id="u529popup">
          <div class="ContainerGroup rgba-background clearfix" id="u529"><!-- stack box -->
           <div class="Container clearfix grpelem" id="u530"><!-- column -->
-           <div class="position_content" id="u530_position_content">
-            <div class="clearfix colelem" id="pu534-4"><!-- group -->
-             <div class="clearfix grpelem" id="u534-4"><!-- content -->
-              <p>create a new playlist</p>
-             </div>
-             <div class="clip_frame grpelem" id="u537"><!-- image -->
-              <img class="block" id="u537_img" src="images/add.png" data-hidpi-src="images/add_2x.png" alt="" width="20" height="20"/>
-             </div>
+           <div class="clearfix colelem" id="pu534-4"><!-- group -->
+            <div class="clearfix grpelem" id="u534-4"><!-- content -->
+             <p>create a new playlist</p>
             </div>
-            <div class="clearfix colelem" id="u532-4"><!-- content -->
-             <p>enter a name for a new playlist and click save to make a new playlist from these songs</p>
+            <div class="clip_frame grpelem" id="u537"><!-- image -->
+             <img class="block" id="u537_img" src="images/add.png" data-hidpi-src="images/add_2x.png" alt="" width="20" height="20"/>
             </div>
-            <div class="clearfix colelem" id="pu539"><!-- group -->
-             <div class="grpelem" id="u539"><!-- custom html -->
-              <input id="newPlayListInput2" style"width=200px;height=30px" placeholder="playlist name"></input>
+           </div>
+           <div class="clearfix colelem" id="u532-4"><!-- content -->
+            <p>enter a name for a new playlist and click save to make a new playlist from these songs</p>
+           </div>
+           <div class="clearfix colelem" id="pu539"><!-- group -->
+            <div class="grpelem" id="u539"><!-- custom html -->
+             <input id="newPlayListInput2" style"width=200px;height=30px" placeholder="playlist name"></input>
 </div>
-             <div class="grpelem" id="u535"><!-- custom html -->
-              <button class="PamphletCloseButton rounded-corners clearfix" id="s2NewPlaylistButton" style="height:30px; width:95px; color=#c4c4c4;border-radius: 10px;">Save</button>
+            <div class="grpelem" id="u535"><!-- custom html -->
+             <button class="PamphletCloseButton rounded-corners clearfix" id="s2NewPlaylistButton" style="height:30px; width:95px; color=#c4c4c4;border-radius: 10px;">Save</button>
 </div>
-             <div class="grpelem" id="u531"><!-- rasterized frame --></div>
-             <div class="grpelem" id="u661"><!-- custom html -->
-              <button class="PamphletCloseButton rounded-corners clearfix" id="s2NewPlaylistCancelButton" style="height:30px; width:95px; color=#c4c4c4;border-radius: 10px;">cancel</button>
+            <div class="grpelem" id="u531"><!-- rasterized frame --></div>
+            <div class="grpelem" id="u661"><!-- custom html -->
+             <button class="PamphletCloseButton rounded-corners clearfix" id="s2NewPlaylistCancelButton" style="height:30px; width:95px; color=#c4c4c4;border-radius: 10px;">cancel</button>
 </div>
-            </div>
            </div>
           </div>
          </div>
@@ -437,15 +428,12 @@ durationSlider2Changed(event,ui);
 </div>
     </div>
     <a class="anchor_item colelem" id="three"></a>
-    <div class="clearfix colelem" id="u255-4"><!-- content -->
-     <p>meet bob</p>
-    </div>
-    <div class="clearfix colelem" id="pu251"><!-- group -->
-     <div class="rounded-corners clip_frame grpelem" id="u251"><!-- image -->
-      <img class="block" id="u251_img" src="images/avaone87x87.jpg" data-hidpi-src="images/avaone87x87_2x.jpg" alt="" width="87" height="87"/>
+    <div class="clearfix colelem" id="pu887"><!-- group -->
+     <div class="clip_frame grpelem" id="u887"><!-- image -->
+      <img class="block" id="u887_img" src="images/wave.png" data-hidpi-src="images/wave_2x.png" alt="" width="60" height="60"/>
      </div>
-     <div class="clearfix grpelem" id="u254-4"><!-- content -->
-      <p>Bob use scenario use scenario use scenario use scenario use scenario use scenario use scenario use scenario use scenario use scenario use scenario use scenario</p>
+     <div class="clearfix grpelem" id="u255-4"><!-- content -->
+      <p>create a playlist by song attributes</p>
      </div>
     </div>
     <div class="clearfix colelem" id="u431-4"><!-- content -->
