--- a/LiveSite/index.html
+++ b/LiveSite/index.html
@@ -11,9 +11,9 @@
   <title>TeamSpotifier</title>
   <!-- CSS -->
   <link rel="stylesheet" type="text/css" href="css/site_global.css?4144991806"/>
-  <link rel="stylesheet" type="text/css" href="css/index.css?4253265949" id="pagesheet"/>
+  <link rel="stylesheet" type="text/css" href="css/index.css?3921715615" id="pagesheet"/>
   <!--[if lt IE 9]>
-  <link rel="stylesheet" type="text/css" href="css/iefonts_index.css?3847144646"/>
+  <link rel="stylesheet" type="text/css" href="css/iefonts_index.css?293011852"/>
   <![endif]-->
   <!-- Other scripts -->
   <script type="text/javascript">
@@ -28,6 +28,8 @@ var __adobewebfontsappname__ = "muse";
   <link rel="stylesheet" href="http://code.jquery.com/ui/1.11.4/themes/smoothness/jquery-ui.css">
 <script src="http://code.jquery.com/jquery-1.10.2.js"></script>
 <script src="http://code.jquery.com/ui/1.11.4/jquery-ui.js"></script>
+
+<script src="http://fgnass.github.io/spin.js/spin.js"></script>
 
 <style>#slider { margin: 10px; }	</style>
 
@@ -60,7 +62,7 @@ var __adobewebfontsappname__ = "muse";
     <a class="anchor_item colelem" id="home"></a>
     <a class="nonblock nontext anim_swing clip_frame mse_pre_init" id="u149" href="index.html#home"><!-- image --><img class="block" id="u149_img" src="images/appicon.png" data-hidpi-src="images/appicon_2x.png" alt="" width="48" height="48"/></a>
     <a class="nonblock nontext anim_swing clearfix mse_pre_init" id="u132-4" href="index.html#home"><!-- content --><p>NotAnotherSpotify!</p></a>
-    <a class="nonblock nontext anim_swing clip_frame mse_pre_init" id="u743" href="index.html#one"><!-- image --><img class="block" id="u743_img" src="images/singer.jpg" data-hidpi-src="images/singer_2x.jpg" alt="" width="31" height="31"/></a>
+    <a class="nonblock nontext anim_swing clip_frame mse_pre_init" id="u743" href="index.html#one"><!-- image --><img class="block" id="u743_img" src="images/singerwhtsolid.png" data-hidpi-src="images/singerwhtsolid_2x.png" alt="" width="31" height="31"/></a>
     <a class="nonblock nontext anim_swing clearfix mse_pre_init" id="u158-4" href="index.html#one"><!-- content --><p>by artist</p></a>
     <a class="nonblock nontext anim_swing clip_frame mse_pre_init" id="u751" href="index.html#two"><!-- image --><img class="block" id="u751_img" src="images/disc.png" data-hidpi-src="images/disc_2x.png" alt="" width="31" height="31"/></a>
     <a class="nonblock nontext anim_swing clearfix mse_pre_init" id="u749-4" href="index.html#two"><!-- content --><p>song &amp; artist</p></a>
@@ -91,15 +93,15 @@ var __adobewebfontsappname__ = "muse";
     </div>
     <div class="clearfix colelem" id="pu695"><!-- group -->
      <div class="grpelem" id="u695"><!-- custom html -->
-      <video width="400" height="240" autoplay=true loop>
-  <source src="video/fixed3.mp4" type="video/mp4">
+      <video width="400" height="240" autoplay=true loop muted>
+  <source src="video/fixed4.mp4" type="video/mp4">
   <source src="movie.ogg" type="video/ogg">
   Your browser does not support the video tag.
 </video>
 </div>
      <div class="grpelem" id="u697"><!-- custom html -->
-      <video width="400" height="240" autoplay="true" loop>
-  <source src="video/fixed3.mp4" type="video/mp4">
+      <video width="400" height="240" autoplay="true" loop muted>
+  <source src="video/fixed4.mp4" type="video/mp4">
   <source src="movie.ogg" type="video/ogg">
   Your browser does not support the video tag.
 </video>
@@ -114,7 +116,7 @@ var __adobewebfontsappname__ = "muse";
     <a class="anchor_item colelem" id="one"></a>
     <div class="clearfix colelem" id="pu874"><!-- group -->
      <div class="clip_frame grpelem" id="u874"><!-- image -->
-      <img class="block" id="u874_img" src="images/singerwht.jpg" data-hidpi-src="images/singerwht_2x.jpg" alt="" width="60" height="60"/>
+      <img class="block" id="u874_img" src="images/singerblksolid.jpg" data-hidpi-src="images/singerblksolid_2x.jpg" alt="" width="60" height="60"/>
      </div>
      <div class="clearfix grpelem" id="u81-4"><!-- content -->
       <p>create a playlist by artist</p>
@@ -149,20 +151,25 @@ durationSlider1Changed(event,ui);
       <div class="clearfix colelem" id="u221-4"><!-- content -->
        <p>15 mins</p>
       </div>
-      <div class="Button rounded-corners clearfix colelem" id="buttonu199"><!-- container box -->
-       <div class="clearfix grpelem" id="u243-4"><!-- content -->
-        <p>Search</p>
-       </div>
-       <div class="clip_frame grpelem" id="u203"><!-- image -->
-        <img class="block" id="u203_img" src="images/search15x15.png" data-hidpi-src="images/search15x15_2x.png" alt="" width="14" height="14"/>
-       </div>
-      </div>
-      <div class="clearfix colelem" id="u184-4"><!-- content -->
-       <p>search results</p>
-      </div>
-      <div class="colelem" id="u353"><!-- custom html -->
-       <div id="u166" class="grpelem" style="height:200px; width:500px; border-width:2px; border-style:solid; overflow:scroll;">test</div>
+      <div class="clearfix colelem" id="pu940"><!-- group -->
+       <div class="grpelem" id="u940"><!-- custom html -->
+        <div id="scenario1Indicator"></div>
 </div>
+       <div class="clearfix grpelem" id="u184-4"><!-- content -->
+        <p>search results</p>
+       </div>
+       <div class="Button rounded-corners clearfix grpelem" id="buttonu199"><!-- container box -->
+        <div class="clearfix grpelem" id="u243-4"><!-- content -->
+         <p>Search</p>
+        </div>
+        <div class="clip_frame grpelem" id="u203"><!-- image -->
+         <img class="block" id="u203_img" src="images/search15x15.png" data-hidpi-src="images/search15x15_2x.png" alt="" width="14" height="14"/>
+        </div>
+       </div>
+       <div class="grpelem" id="u353"><!-- custom html -->
+        <div id="u166" class="grpelem" style="height:200px; width:500px; border-width:2px; border-style:solid; overflow:scroll;">test</div>
+</div>
+      </div>
       <div class="PamphletWidget clearfix widget_invisible colelem" id="pamphletu291"><!-- none box -->
        <div class="ThumbGroup clearfix grpelem" id="u292"><!-- none box -->
         <div class="popup_anchor">
@@ -283,7 +290,10 @@ durationSlider1Changed(event,ui);
 </div>
      <div class="grpelem" id="u363"><!-- rasterized frame --></div>
     </div>
-    <div class="clearfix colelem" id="ppu366-4"><!-- group -->
+    <div class="clearfix colelem" id="pu962"><!-- group -->
+     <div class="grpelem" id="u962"><!-- custom html -->
+      <div id="scenario2Indicator"></div>
+</div>
      <div class="clearfix grpelem" id="pu366-4"><!-- column -->
       <div class="clearfix colelem" id="u366-4"><!-- content -->
        <p>adjust the duration of your playlist</p>
@@ -483,7 +493,10 @@ energySliderChanged(event,ui);
       <p><span id="u664">0 min, 15 max</span></p>
      </div>
     </div>
-    <div class="clearfix colelem" id="ppu427-4"><!-- group -->
+    <div class="clearfix colelem" id="pu964"><!-- group -->
+     <div class="grpelem" id="u964"><!-- custom html -->
+      <div id="scenario3Indicator"></div>
+</div>
      <div class="clearfix grpelem" id="pu427-4"><!-- column -->
       <div class="clearfix colelem" id="u427-4"><!-- content -->
        <p>danceability</p>
@@ -653,12 +666,12 @@ livenessSliderChanged(event,ui);
     </div>
     <div class="browser_width" id="accordionu833-bw">
      <ul class="AccordionWidget clearfix pinned-colelem" id="accordionu833"><!-- vertical box -->
-      <li class="AccordionPanel clearfix colelem100" id="u834"><!-- vertical box --><div class="AccordionPanelTab clearfix colelem100" id="u835-3"><!-- content --><p>&nbsp;</p></div><div class="AccordionPanelContent disn clearfix colelem100" id="u836"><!-- group --><div class="grpelem" id="u838"><!-- custom html --><div id="albumArtworkDiv" class="grpelem" style="height:200px; width:200px; border-width:2px; border-style:solid; overflow:scroll;">test</div></div><div class="clearfix grpelem" id="pu837-4"><!-- column --><div class="clearfix colelem" id="u837-4"><!-- content --><p>song name</p></div><div class="clearfix colelem" id="u840-4"><!-- content --><p>artist name</p></div><div class="clearfix colelem" id="u841-4"><!-- content --><p>bio</p></div><div class="clearfix colelem" id="u842-4"><!-- content --><p>artist bio info</p></div></div><div class="clearfix grpelem" id="ppu863-4"><!-- column --><div class="clearfix colelem" id="pu863-4"><!-- group --><div class="clearfix grpelem" id="u863-4"><!-- content --><p>manage playlists</p></div><div class="clip_frame grpelem" id="u864"><!-- image --><img class="block" id="u864_img" src="images/managelist.png" data-hidpi-src="images/managelist_2x.png" alt="" width="43" height="43"/></div><div class="clearfix grpelem" id="u866-4"><!-- content --><p>select a playlist to play, edit, or delete</p></div></div><div class="clearfix colelem" id="u857-4"><!-- content --><p>select playlist</p></div><div class="clearfix colelem" id="pu855"><!-- group --><div class="grpelem" id="u855"><!-- custom html --><select name="playlistSelector" style="width:150px; height:50px" id="scenario1PlaylistSelector">
+      <li class="AccordionPanel clearfix colelem100" id="u834"><!-- vertical box --><div class="AccordionPanelTab clearfix colelem100" id="u835-3"><!-- content --><p>&nbsp;</p></div><div class="AccordionPanelContent disn clearfix colelem100" id="u836"><!-- column --><div class="clearfix colelem" id="pu956"><!-- group --><div class="clip_frame grpelem" id="u956"><!-- image --><img class="block" id="u956_img" src="images/playingplayist.png" data-hidpi-src="images/playingplayist_2x.png" alt="" width="49" height="51"/></div><div class="clearfix grpelem" id="u955-4"><!-- content --><p>playing playlist: title</p></div><div class="clip_frame grpelem" id="u864"><!-- image --><img class="block" id="u864_img" src="images/managelist.png" data-hidpi-src="images/managelist_2x.png" alt="" width="43" height="43"/></div><div class="clearfix grpelem" id="u863-4"><!-- content --><p>manage playlists</p></div></div><div class="clearfix colelem" id="pu838"><!-- group --><div class="grpelem" id="u838"><!-- custom html --><div id="albumArtworkDiv" class="grpelem" style="height:300px; width:295px; border-width:2px; border-style:solid; overflow:scroll;">test</div></div><div class="clearfix grpelem" id="pu837-4"><!-- column --><div class="clearfix colelem" id="u837-4"><!-- content --><p>song name</p></div><div class="clearfix colelem" id="u840-4"><!-- content --><p>artist name</p></div><div class="clearfix colelem" id="u841-4"><!-- content --><p>bio</p></div><div class="clearfix colelem" id="u842-4"><!-- content --><p>artist bio info</p></div></div><div class="clearfix grpelem" id="pu866-4"><!-- column --><div class="clearfix colelem" id="u866-4"><!-- content --><p>select a playlist to play, edit, or delete</p></div><div class="clearfix colelem" id="u857-4"><!-- content --><p>select playlist</p></div><div class="clearfix colelem" id="pu855"><!-- group --><div class="grpelem" id="u855"><!-- custom html --><select name="playlistSelector" style="width:150px; height:50px" id="scenario1PlaylistSelector">
   <option value="volvo">Volvo</option>
   <option value="saab">Saab</option>
   <option value="fiat">Fiat</option>
   <option value="audi">Audi</option>
-</select></div><div class="grpelem" id="u853"><!-- custom html --><div id="managePlaylistDiv" class="grpelem" style="height:250px; width:450px; border-width:2px; border-style:solid; overflow:scroll;">test</div></div></div><div class="clearfix colelem" id="pu851"><!-- group --><div class="grpelem" id="u851"><!-- custom html --><button id="playWholePlaylistButton" style="height:30px; width:100px; background-color:#c4c4c4;border-radius: 10px;">play</button></div><div class="grpelem" id="u849"><!-- custom html --><button id="buttonu622" style="height:30px; width:130px; background-color:#c4c4c4;border-radius: 10px;">delete playlist</button></div></div></div></div></li>
+</select></div><div class="grpelem" id="u853"><!-- custom html --><div id="managePlaylistDiv" class="grpelem" style="height:230px; width:450px; border-width:2px; border-style:solid; overflow:scroll;">test</div></div></div></div></div><div class="clearfix colelem" id="pu851"><!-- group --><div class="grpelem" id="u851"><!-- custom html --><button id="playWholePlaylistButton" style="height:30px; width:100px; background-color:#c4c4c4;border-radius: 10px;">play</button></div><div class="grpelem" id="u849"><!-- custom html --><button id="buttonu622" style="height:30px; width:130px; background-color:#c4c4c4;border-radius: 10px;">delete playlist</button></div></div></div></li>
      </ul>
     </div>
     <div class="verticalspacer"></div>
